# r_place_data

./: .gitignore  Cargo.toml  README.md  example_lines.txt  heatmap.ipynb  rects.ipynb
src/: data.rs  lib.rs  main.rs  parser.rs
