[package]
name = "r_place_data"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "r_place_data"
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.0" }
chrono = "0.4"
regex = "1.5"
lazy_static = "1.4.0"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
numpy = "0.16"
ndarray = "0.15"
nom = "7.1"